--- a/.github/workflows/1-setup-discussions.yml
+++ b/.github/workflows/1-setup-discussions.yml
@@ -6,11 +6,9 @@ name: Step 1, Open a pull request
 # This will run every time we create a branch or tag.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
-  workflow_dispatch:
   pull_request:
-    types:
-      - opened
-      - reopened
+    types: [opened, reopened]
+
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -45,7 +43,7 @@ jobs:
     if: >-
       ${{ !github.event.repository.is_template
           && needs.get_current_step.outputs.current_step == 1
-          && github.head_ref == 'update-game' }}
+          && github.head_ref == 'enable-discussions' }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
