--- a/.github/workflows/2-create-discussion.yml
+++ b/.github/workflows/2-create-discussion.yml
@@ -6,11 +6,8 @@ name: Step 2, Assign yourself
 # This will run every time someone is assigned as a pull request reviewer.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
-  workflow_dispatch:
-  pull_request:
-    types:
-      - assigned
-      - review_requested
+  discussion:
+    types: [created]
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -42,8 +39,9 @@ jobs:
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
-      ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 2 }}
+      ${{ needs.get_current_step.outputs.current_step == 2
+          && (github.event.discussion.category.name == 'Q&A' || github.event.discussion.category.name == 'Ideas') }}
+
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
