--- a/.github/workflows/3-reply-upvote.yml
+++ b/.github/workflows/3-reply-upvote.yml
@@ -6,10 +6,10 @@ name: Step 3, Leave a review
 # This will run every time we leave a pull request review.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
-  workflow_dispatch:
-  pull_request_review:
-    types:
-      - submitted
+  discussion_comment:
+    types: [created]
+  reaction:
+    types: [created]
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -41,8 +41,8 @@ jobs:
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
-      ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 3 }}
+      ${{ needs.get_current_step.outputs.current_step == 3
+          && (github.event_name == 'discussion_comment' || github.event.reaction.content == '+1') }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
