--- a/.github/workflows/4-mark-answered.yml
+++ b/.github/workflows/4-mark-answered.yml
@@ -6,10 +6,8 @@ name: Step 4, Suggest changes
 # This will run every time we leave a review comment.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
-  workflow_dispatch:
-  pull_request_review_comment:
-    types:
-      - created
+  discussion:
+    types: [answered]
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -41,8 +39,7 @@ jobs:
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
-      ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 4 }}
+      ${{ needs.get_current_step.outputs.current_step == 4 }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
