--- a/.github/workflows/1-setup-discussions.yml
+++ b/.github/workflows/1-setup-discussions.yml
@@ -1,4 +1,4 @@
-name: Step 1, Open a pull request
+name: Step 1, Setup Discussions
 
 # This step listens for the learner to open a pull request with branch `update-game`.
 # This workflow updates from step 1 to step 2.
@@ -6,6 +6,7 @@ name: Step 1, Open a pull request
 # This will run every time we create a branch or tag.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
+  workflow_dispatch:
   pull_request:
     types: [opened, reopened]
 
@@ -30,8 +31,8 @@ jobs:
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_open_a_pull_request:
-    name: On open a pull request
+  on_enable_discussions:
+    name: Proceed to Step 2
     needs: get_current_step
 
     # We will only run this action when:
@@ -49,18 +50,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # We'll need to check out the repository so that we can edit the README.
-      - name: Checkout
+      - name: Checkout learner branch
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Let's get all the branches.
-          ref: update-game # Important, as normally `pull_request` event won't grab other branches.
-
-      # In README.md, switch step 1 for step 2.
+          fetch-depth: 0
+          ref: enable-discussions
       - name: Update to step 2
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 1
           to_step: 2
-          branch_name: update-game
+          branch_name: enable-discussions
