--- a/.github/workflows/3-reply-upvote.yml
+++ b/.github/workflows/3-reply-upvote.yml
@@ -1,4 +1,4 @@
-name: Step 3, Leave a review
+name: Step 3, Reply and Upvote
 
 # This step triggers after the user leaves a pull request review.
 # This workflow updates from step 3 to step 4.
@@ -31,10 +31,10 @@ jobs:
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_leave_review:
-    name: On leave review
+  on_reply_react:
+    name: Proceed to Step 4
     needs: get_current_step
-
+    
     # We will only run this action when:
     # 1. This repository isn't the template repository.
     # 2. The step is currently 3.
@@ -47,19 +47,14 @@ jobs:
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
 
-    steps:
-      # We'll need to check out the repository so that we can edit the README.
+     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Let's get all the branches.
-          ref: update-game
-
-      # In README.md, switch step 3 for step 4.
+        
       - name: Update to step 4
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 3
           to_step: 4
-          branch_name: update-game
+          branch_name: main
