--- a/.github/workflows/5-organize-categories.yml
+++ b/.github/workflows/5-organize-categories.yml
@@ -1,22 +1,16 @@
 name: Step 5, Organize with Categories
 
-# This step triggers after the user applies the pull request suggested change.
+# This step triggers when a discussion is edited (e.g., category changed).
 # This workflow updates from step 5 to step 6.
 
-# This will run every time we push to the `update-game branch`.
-# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   discussion:
     types: [edited]
 
-# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository.
-  # Need `contents: write` to update the step metadata.
   contents: write
 
 jobs:
-  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -25,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
       - id: get_step
         run: |
-          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
+          echo "current_step=$(cat .github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
@@ -33,21 +27,15 @@ jobs:
     name: Proceed to Finish
     needs: get_current_step
 
-    # We will only run this action when:
-    # 1. This repository isn't the template repository.
-    # 2. The step is currently 5.
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
+    # Only run this if we are on step 5
     if: >-
       ${{ needs.get_current_step.outputs.current_step == 5 }}
 
-    # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
-
-   steps:
+    steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Update to finish
         uses: skills/action-update-step@v2
         with:
