--- a/.github/workflows/3-reply-upvote.yml
+++ b/.github/workflows/3-reply-upvote.yml
@@ -1,24 +1,18 @@
 name: Step 3, Reply and Upvote
 
-# This step triggers after the user leaves a pull request review.
+# This step triggers when the user either replies to a discussion or reacts with 👍.
 # This workflow updates from step 3 to step 4.
 
-# This will run every time we leave a pull request review.
-# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   discussion_comment:
     types: [created]
   reaction:
     types: [created]
 
-# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository.
-  # Need `contents: write` to update the step metadata.
   contents: write
 
 jobs:
-  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -27,30 +21,25 @@ jobs:
         uses: actions/checkout@v4
       - id: get_step
         run: |
-          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
+          echo "current_step=$(cat .github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_reply_react:
+  on_reply_or_react:
     name: Proceed to Step 4
     needs: get_current_step
-    
-    # We will only run this action when:
-    # 1. This repository isn't the template repository.
-    # 2. The step is currently 3.
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
+
+    # Only continue if the user is on step 3 AND either replies or gives a 👍
     if: >-
-      ${{ needs.get_current_step.outputs.current_step == 3
-          && (github.event_name == 'discussion_comment' || github.event.reaction.content == '+1') }}
+      ${{ needs.get_current_step.outputs.current_step == 3 &&
+          (github.event_name == 'discussion_comment' ||
+           github.event.reaction.content == '+1') }}
 
-    # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
-
-     steps:
+    steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Update to step 4
         uses: skills/action-update-step@v2
         with:
