--- a/.github/workflows/2-create-discussion.yml
+++ b/.github/workflows/2-create-discussion.yml
@@ -1,22 +1,16 @@
-name: Step 2, Create Discussion
+name: Step 2, Create a Discussion
 
-# This step triggers after the user assigns themselves as a pull request reviewer.
+# This step triggers when a user creates a discussion in Q&A or Ideas.
 # This workflow updates from step 2 to step 3.
 
-# This will run every time someone is assigned as a pull request reviewer.
-# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   discussion:
     types: [created]
 
-# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository.
-  # Need `contents: write` to update the step metadata.
   contents: write
 
 jobs:
-  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -25,30 +19,25 @@ jobs:
         uses: actions/checkout@v4
       - id: get_step
         run: |
-          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
+          echo "current_step=$(cat .github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-   on_created:
+  on_discussion_created:
     name: Proceed to Step 3
     needs: get_current_step
 
-    # We will only run this action when:
-    # 1. This repository isn't the template repository.
-    # 2. The step is currently 2.
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
+    # Only proceed if we're currently on step 2 AND the category is Q&A or Ideas
     if: >-
-      ${{ needs.get_current_step.outputs.current_step == 2
-          && (github.event.discussion.category.name == 'Q&A' || github.event.discussion.category.name == 'Ideas') }}
+      ${{ needs.get_current_step.outputs.current_step == 2 &&
+          (github.event.discussion.category.name == 'Q&A' ||
+           github.event.discussion.category.name == 'Ideas') }}
 
-
-    # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
-  
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Update to step 3
         uses: skills/action-update-step@v2
         with:
