--- a/.github/workflows/3-reply-upvote.yml
+++ b/.github/workflows/3-reply-upvote.yml
@@ -1,12 +1,7 @@
-name: Step 3, Reply and Upvote
-
-# This step triggers when the user either replies to a discussion or reacts with 👍.
-# This workflow updates from step 3 to step 4.
+name: Step 3, Reply to a Discussion
 
 on:
   discussion_comment:
-    types: [created]
-  reaction:
     types: [created]
 
 permissions:
@@ -19,21 +14,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - id: get_step
         run: |
           echo "current_step=$(cat .github/steps/-step.txt)" >> $GITHUB_OUTPUT
+
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_reply_or_react:
+  on_comment_created:
     name: Proceed to Step 4
     needs: get_current_step
 
-    # Only continue if the user is on step 3 AND either replies or gives a 👍
     if: >-
-      ${{ needs.get_current_step.outputs.current_step == 3 &&
-          (github.event_name == 'discussion_comment' ||
-           github.event.reaction.content == '+1') }}
+      ${{ needs.get_current_step.outputs.current_step == 3 }}
 
     runs-on: ubuntu-latest
     steps:
