--- a/.github/workflows/3-pin-reply.yml
+++ b/.github/workflows/3-pin-reply.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Move to Step 4
-        run: gh-actions-importer move-to-step finish
+        run: gh-actions-importer move-to-step 4
