--- a/.github/workflows/1-create-discussion.yml
+++ b/.github/workflows/1-create-discussion.yml
@@ -4,10 +4,49 @@ on:
   discussion:
     types: [created]
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
-  proceed-to-step2:
-    if: github.event.discussion.title == 'Skill Practice: Pinning Discussions'
+  check_step_and_advance:
+    name: Move to Step 2
+    if: >-
+      github.event.discussion.title != ''
     runs-on: ubuntu-latest
+
     steps:
-      - name: Move to Step 2
-        run: gh-actions-importer move-to-step step2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Get current step
+        id: get_step
+        run: |
+          echo "current_step=$(cat .github/steps/-step.txt)" >> $GITHUB_OUTPUT
+
+      - name: Create branch and commit (trigger step)
+        if: steps.get_step.outputs.current_step == '1'
+        run: |
+          BRANCH=update-step-2
+          git checkout -b $BRANCH
+
+          # You can modify any file if needed, this is just a placeholder
+          echo "<!-- Step 2 triggered -->" >> trigger.log
+          
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
+          git add trigger.log
+          git commit -m "Trigger step 2 after discussion created"
+          git push --set-upstream origin $BRANCH
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update to step 2
+        if: steps.get_step.outputs.current_step == '1'
+        uses: skills/action-update-step@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          from_step: 1
+          to_step: 2
+          branch_name: update-step-2
+
