--- a/.github/workflows/2-pin-discussion.yml
+++ b/.github/workflows/2-pin-discussion.yml
@@ -4,10 +4,48 @@ on:
   discussion:
     types: [edited]
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
-  proceed-to-step3:
-    if: github.event.discussion.pinned == true && github.event.discussion.title == 'Skill Practice: Pinning Discussions'
+  check_and_proceed_to_step3:
+    name: Move to Step 3
+    if: >-
+      github.event.discussion.pinned == true
     runs-on: ubuntu-latest
+
     steps:
-      - name: Move to Step 3
-        run: gh-actions-importer move-to-step step3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Get current step
+        id: get_step
+        run: |
+          echo "current_step=$(cat .github/steps/-step.txt)" >> $GITHUB_OUTPUT
+
+      - name: Create branch and commit (trigger step)
+        if: steps.get_step.outputs.current_step == '2'
+        run: |
+          BRANCH=update-step-3
+          git checkout -b $BRANCH
+
+          # Add a file or log as a trigger (optional)
+          echo "<!-- Step 3 triggered -->" >> trigger.log
+
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
+          git add trigger.log
+          git commit -m "Trigger step 3 after pinning a discussion"
+          git push --set-upstream origin $BRANCH
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update to step 3
+        if: steps.get_step.outputs.current_step == '2'
+        uses: skills/action-update-step@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          from_step: 2
+          to_step: 3
+          branch_name: update-step-3
